# XXConnect

./: CMakeLists.txt  Integration.md  Interface.md  LICENSE  README.md  index.html  main.cpp  run_tests.bat  run_tests.sh  script.js  signaling_server.py  style.css
AudioRecorder/: AudioRecorder.cpp  AudioRecorder.hpp  CMakeLists.txt  RecordData.hpp  WavWorker.cpp  WavWorker.hpp
SavingWorkers/: ISavingWorker.cpp  ISavingWorker.hpp  WavWorker.cpp
WavWorker/: CMakeLists.txt  WavWorker.cpp  WavWorker.hpp
docs/: app.js  index.html  script.js  style.css
front/: app.js  index.html  style.css
frontend/: style.css
include/: AudioProcessor.hpp  AudioRecorder.hpp  NoiseSuppressor.hpp  SignalingClient.hpp  WebRTCCall.hpp  debug_log.hpp
lib/client/: CMakeLists.txt  client.cpp  client.h  client_connection_manager.cpp  client_connection_manager.h
src/: AudioProcessor.cpp  AudioReceiver.cpp  AudioRecorder.cpp  AudioSender.cpp  ISavingWorker.cpp  NoiseSuppressor.cpp  SignalingClient.cpp  WavWorker.cpp  WebRTCCall.cpp  audio_processor.h  main.cpp  permission_manager.h  rnnoise_wrapper.cpp  rnnoise_wrapper.h  test_rnnoise.cpp  virtual_mic.h  wav_writer.h
src/AudioReceiver/: AudioReceiver.cpp  AudioReceiver.hpp  CMakeLists.txt
src/AudioRecorder/: AudioRecorder.cpp  AudioRecorder.hpp  NoiseSuppressor.cpp  RecordData.hpp
src/AudioSender/: AudioSender.cpp  AudioSender.hpp  CMakeLists.txt
src/SavingWorkers/: WavWorker.cpp
src/rnnoise/: CMakeLists.txt  FindRnnoise.cmake
tests/: CMakeLists.txt  WebRTC_call_test.cpp  WebRTC_full_test.cpp  WebRTC_receiver_test.cpp  WebRTC_recorder_test.cpp  WebRTC_test.cpp  test_utils.hpp
